--- a/s/sm/sma/smartshanghai.com.html
+++ b/s/sm/sma/smartshanghai.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smartshanghai.com privacy policy that was archived on 2013-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130630163418id_/http%3A//www.smartshanghai.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smartshanghai.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224091805id_/http%3A//www.smartshanghai.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -14,12 +14,18 @@
 
 </head>
 
-<body style="background: #000000 url('http://smartchina.com/static/smsh/wallpaper/wallpaperenoterra.jpg') top center no-repeat;">
 
-<div style="width: 980px; margin: 0 auto; height: 160px;"><a href="http://www.enoterra.com.cn/"><img src="http://www.smartshanghai.com/img/headerimg/ticketempty.gif" width="980" height="160" border="0"></a></div>
-<div id="container"> 
+
+<body style="background: #ffffff url('http://smartchina.com/static/smsh/wallpaper/fields_christmas_wallpaper.jpg') top center no-repeat;">
+
+<div style="margin: 0 auto; height: 160px;"> <a href="http://www.fieldschina.com/index.php?route=information/information&amp;id=131&amp;lang=en&amp;utm_source=smartshanghai&amp;utm_medium=wallpaper&amp;utm_campaign=xmas" target="_blank"><img src="http://www.smartshanghai.com/img/headerimg/ticketempty.gif" width="980" height="160" border="0"></a></div>
+
+
+<div id="container" style="-moz-box-shadow: 0 0 5px #888;
+-webkit-box-shadow: 0 0 5px#888;
+box-shadow: 0 0 5px #888;"> 
   <div id="userbar">
-    <div class="ubleft"><span class="activecity"><b>Shanghai</b></span> <a href="http://www.smartbeijing.com">Beijing</a> <span class="uspacer">|</span><a href="http://mobile.smartshanghai.com">Mobile</a> <a href="http://www.smartshanghai.com/ipad/">iPad</a> <a href="http://www.smartshanghai.com/feeds/">RSS</a> <a href="http://www.twitter.com/smartshanghai" title="SmartShanghai on Twitter">Twitter</a> <a href="http://www.weibo.com/smartshanghai" title="SmartShanghai on Weibo">Weibo</a> <a href="http://www.facebook.com/smartshanghai">Facebook</a> </div>
+    <div class="ubleft"><span class="activecity"><b>Shanghai</b></span> <a href="http://www.smartbeijing.com">Beijing</a> <span class="uspacer">|</span><a href="http://mobile.smartshanghai.com">Mobile</a> <a href="http://www.smartshanghai.com/iphone/">iPhone</a> <a href="http://www.smartshanghai.com/ipad/">iPad</a> <a href="http://www.smartshanghai.com/feeds/">RSS</a> <a href="http://www.twitter.com/smartshanghai" title="SmartShanghai on Twitter">Twitter</a> <a href="http://www.weibo.com/smartshanghai" title="SmartShanghai on Weibo">Weibo</a> <a href="http://www.facebook.com/smartshanghai">Facebook</a> </div>
     <div class="ubright"> <a href="http://www.smartshanghai.com/user/join">Hello Guest</a> <a href="http://www.smartshanghai.com/user/">Sign In</a>
       
       <a href="http://www.smartshanghai.com/smartticket/cart.php">SmartTicket Cart</a> <a href="javascript:null();" onclick="openheaderdrop('favpop');" class="drop" id="showfavs">Favorites</a></div>
@@ -46,7 +52,7 @@
       <div class="closebtn"><img src="http://www.smartshanghai.com/img/bodyimg/favsclose.png" width="33" height="11" style="margin: 0 0 0 5px;"></div>
       </a> </div>
   </div>
-  <div id="header" style="background: url('http://www.smartshanghai.com/img/headerimg/michaeljackson.png') no-repeat;">
+  <div id="header" style="background: url('http://www.smartshanghai.com/img/headerimg/jamesblunt.png') no-repeat;">
     <div id="logo">
       <p class="smshlogo"><a href="http://www.smartshanghai.com"><img src="http://www.smartshanghai.com/img/bodyimg/smshlogot.gif" border="0" width="200" height="100"></a></p>
     </div>
@@ -67,7 +73,7 @@
             <button class="sbbtn" title="Submit Search">Search</button>
           </div>
           <br class="clear">
-          <p class="popsearch"><b style="margin: 0 5px 0 0;">Popular:</b> <a href="http://www.smartbeijing.com/search/?q=brunch&amp;nocount=true">Brunch</a>, <a href="http://www.smartbeijing.com/search/?q=Cinemas&amp;nocount=true">Cinemas</a>, <a href="http://www.smartbeijing.com/search/?q=mr pancake&amp;nocount=true">Mr Pancake</a>, <a href="http://www.smartbeijing.com/search/?q=Maya&amp;nocount=true">Maya</a> <a href="http://www.smartshanghai.com/search/" style="margin: 0 0 0 10px;"><b>Advanced Search »</b></a></p>
+          <p class="popsearch"><b style="margin: 0 5px 0 0;">Popular:</b> <a href="http://www.smartshanghai.com/search/?q=christmas&amp;nocount=true">Christmas</a>, <a href="http://www.smartshanghai.com/search/?q=brunch&amp;nocount=true">Brunch</a>, <a href="http://www.smartshanghai.com/search/?q=Farine&amp;nocount=true">Farine</a>, <a href="http://www.smartshanghai.com/search/?q=christmas dinner&amp;nocount=true">Christmas Dinner</a> <a href="http://www.smartshanghai.com/search/" style="margin: 0 0 0 10px;"><b>Advanced Search »</b></a></p>
         </form>
       </div>
     </div>
@@ -88,7 +94,7 @@
             <button class="sbbtn" title="Submit Search">Search</button>
           </div>
           <br class="clear">
-          <p class="popsearch"><b style="margin: 0 5px 0 0;">Popular:</b> <a href="http://www.smartshanghai.com/events/?q=狼爪&amp;nocount=true">狼爪</a>, <a href="http://www.smartshanghai.com/events/?q=ocean nutrition canada&amp;nocount=true">Ocean Nutrition Canada</a>, <a href="http://www.smartshanghai.com/events/?q=滑冰&amp;nocount=true">滑冰</a>, <a href="http://www.smartshanghai.com/events/?q=哈佛商学院&amp;nocount=true">哈佛商学院</a> <a href="http://www.smartshanghai.com/search/events/" style="margin: 0 0 0 10px;"><b>Advanced Search »</b></a></p>
+          <p class="popsearch"><b style="margin: 0 5px 0 0;">Popular:</b> <a href="http://www.smartshanghai.com/events/?q=christmas&amp;nocount=true">Christmas</a>, <a href="http://www.smartshanghai.com/events/?q=new year&amp;nocount=true">New Year</a>, <a href="http://www.smartshanghai.com/events/?q=new&amp;nocount=true">New</a>, <a href="http://www.smartshanghai.com/events/?q=beer&amp;nocount=true">Beer</a> <a href="http://www.smartshanghai.com/search/events/" style="margin: 0 0 0 10px;"><b>Advanced Search »</b></a></p>
         </form>
       </div>
     </div>
@@ -135,11 +141,11 @@
         </form>
       </div>
     </div>
-    <div id="ticketpromo">
-      <div style="padding: 0px 0 0 0; line-height: 15px; margin: 0 0 0 0px; font-size: 11px;"> <a href="http://www.smartshanghai.com/smartticket/michael-jackson-the-immortal" style="color: white; text-decoration:underline;"><img src="http://www.smartshanghai.com/img/headerimg/ticketempty.gif" width="200" height="94" border="0">
-<p style="padding: 5px 0 0 38px;">Tickets here</p>
-        </a> </div>
-    </div>
+      <div id="ticketpromo">
+          <div style="padding: 0px 0 0 0; line-height: 15px; margin: 0 0 0 0px; font-size: 10px;"> <a href="http://www.smartshanghai.com/smartticket/james_blunt" style="color: black; text-decoration:underline;"><img src="http://www.smartshanghai.com/img/headerimg/ticketempty.gif" width="200" height="72" border="0">
+              <p style="padding: 10px 0 0 19px;"><b>TICKETS HERE</b></p>
+          </a> </div>
+      </div>
     <br class="clear">
   </div>
   <div id="navi"><a href="http://www.smartshanghai.com/dining/" class="nav-dining"><span class="displace">Dining</span></a> <a href="http://www.smartshanghai.com/nightlife/" class="nav-nightlife"><span class="displace">Nightlife</span></a> <a href="http://www.smartshanghai.com/artstage/" class="nav-artstage"><span class="displace">Art &amp; Stage</span></a> <a href="http://www.smartshanghai.com/wellbeing/" class="nav-wellbeing"><span class="displace">Wellbeing</span></a> <a href="http://www.smartshanghai.com/shopping/" class="nav-shopping"><span class="displace">Shopping</span></a> <a href="http://www.smartshanghai.com/activities/" class="nav-activities"><span class="displace">Activities</span></a> <a href="http://www.smartshanghai.com/travel/" class="nav-travel"><span class="displace">Travel</span></a> <br class="clear">
@@ -155,8 +161,10 @@
           <li><a href="http://www.smartshanghai.com/tags/cook-it" title="Recipes designed by Shanghai chefs ">Cook It</a></li>
           <li><a href="http://www.smartshanghai.com/tags/dvd_sunday">DVD Sunday</a></li>
           <li><a href="http://www.smartshanghai.com/tags/imbibe">Imbibe</a></li>
-          <li><a href="http://www.smartshanghai.com/tags/lunchbreak">Lunch Break</a></li>
-          <li><a href="http://www.smartshanghai.com/tags/mp3_monday">Mp3 Monday</a></li>
+<li><a href="http://www.smartshanghai.com/tags/industrynights">Industry Nights</a></li>
+<li><a href="http://www.smartshanghai.com/tags/lunchbreak">Lunch Break</a></li>
+		<li><a href="http://www.smartshanghai.com/tags/made-in-china">Made in China</a></li>
+<li><a href="http://www.smartshanghai.com/tags/mp3_monday">Mp3 Monday</a></li>
           <li><a href="http://www.smartshanghai.com/tags/mylocal">My Local</a></li>
           <li><a href="http://www.smartshanghai.com/myweekender/">My Weekender</a></li>
           <li><a href="http://www.smartshanghai.com/tags/offbeat">Offbeat</a></li>
@@ -268,13 +276,14 @@ SmartShanghai gives all registered <b>users</b> the options for deleting their p
 If you have questions regarding our privacy policies, or require assistance in opting out of our email lists, please contact us using our <a href="http://www.smartshanghai.com/contact">contact form here</a>.<br><br><br>SmartShanghai.com, Dec 2010<br>
 <p></p>
 </div>
-  <div style="background: #f1f1f1; text-align: center; padding: 10px 0; margin: 10px 0 0px 0;"><a href="http://www.smartshanghai.com/doubleclick.php?a=7179&amp;u=http://www.smartshanghai.com/" target="_blank">
-				<img src="http://www.smartshanghai.com/eximg/eximg1370359675.jpg" width="760" height="120" border="0"></a></div>
+  <div style="background: #f1f1f1; text-align: center; padding: 10px 0; margin: 10px 0 0px 0;"><a href="http://www.smartshanghai.com/doubleclick.php?a=8130&amp;u=http://www.smartshanghai.com/" target="_blank">
+				<img src="http://www.smartshanghai.com/eximg/eximg1386320300.jpg" width="760" height="120" border="0"></a></div>
   <div id="footer">
     <div style="float: left; width: 730px; margin: 0 0 0 50px; padding: 7px 0 0 0;"> <a href="http://www.smartshanghai.com/service/about">About SmartShanghai</a> | <a href="http://www.smartshanghai.com/contact">Contact us</a> | <a href="http://www.smartshanghai.com/service/events">Submit Events</a> | <a href="http://www.smartshanghai.com/service/venues">Submit a Venue Listing</a> | <a href="http://www.smartshanghai.com/service/advertise">Advertise with us</a> | <a href="http://www.smartshanghai.com/service/faq">FAQ</a> <br>
       <span style="font-size: 11px;">SmartShanghai.com | <a href="http://www.smartbeijing.com">SmartBeijing.com</a> | <a href="http://www.creativehunt.com">CreativeHunt.com</a> | <a href="http://www.smartshanghai.com/privacy">Privacy</a> | ICP 北京 05052457 (US Server)</span> </div>
     <br class="clear">
   </div>
+
 </div>
 
 <script type="text/javascript">
@@ -291,6 +300,7 @@ If you have questions regarding our privacy policies, or require assistance in o
   })();
 
 </script>
+
 
 
 </body></html>
