--- a/f/fr/fre/freeonlineusers.com.html
+++ b/f/fr/fre/freeonlineusers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeonlineusers.com privacy policy that was archived on 2013-01-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130112204809id_/http%3A//www.freeonlineusers.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeonlineusers.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224145850id_/http%3A//freeonlineusers.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
