--- a/h/ho/hos/hostelbookers.com.html
+++ b/h/ho/hos/hostelbookers.com.html
@@ -1,35 +1,33 @@
-<!--The following is the downloaded HTML source of the hostelbookers.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621023432id_/http%3A//www.hostelbookers.com/index.cfm%3Ffuseaction%3Dknowledgebase.article%26articleid%3D42%26thickbox%3Dfalse) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hostelbookers.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224161707id_/http%3A//www.hostelbookers.com/index.cfm%3Ffuseaction%3Dknowledgebase.article%26articleid%3D42%26thickbox%3Dfalse) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Customer Knowledge Base</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="EN-GB">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/common.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/corporate.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/ratingsub.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/confirm.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/press.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/summersale.min.css" rel="stylesheet" type="text/css" media="screen">
-<link rel="shortcut icon" href="http://en-img.hb-assets.com/r13/assets/common/images/favicon/favicon.ico">
-<!--[if IE]><link rel="stylesheet" href="http://en-css.hb-assets.com/r30/assets/common/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/print.min.css" rel="stylesheet" type="text/css" media="print">
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/assets/common/javascript/compression/common.top.min.js"></script>
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/assets/common/javascript/compression/newslettersignup.top.min.js"></script>
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/locations/countries.js"></script>
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/assets/lang/js/searchboxtranslations.js"></script>
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/common.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/corporate.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/ratingsub.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/confirm.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/press.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/summersale.min.css" rel="stylesheet" type="text/css" media="screen">
+<link rel="shortcut icon" href="http://en-img.hb-assets.com/r20/assets/common/images/favicon/favicon.ico">
+<!--[if IE]><link rel="stylesheet" href="http://en-css.hb-assets.com/r45/assets/common/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/print.min.css" rel="stylesheet" type="text/css" media="print">
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/assets/common/javascript/compression/common.top.min.js"></script>
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/assets/common/javascript/compression/newslettersignup.top.min.js"></script>
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/locations/countries.js"></script>
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/assets/lang/js/searchboxtranslations.js"></script>
 <script type="text/javascript">
-HB.Globals={jsUrl:"http://en-js.hb-assets.com/r22",imgUrl:"http://en-img.hb-assets.com/r13"};
+HB.Globals={jsUrl:"http://en-js.hb-assets.com/r39",imgUrl:"http://en-img.hb-assets.com/r20"};
 var stuMaxDays = {intMaxDays : 365, intMaxGroupDays : 366, intMaxBookingDays: 31};
 </script>
-<script type="text/javascript">
-$(window).load(function(){var oScript=document.createElement("script");var oBody=document.getElementsByTagName("body")[0];var bSecure=false;var strTrackingDomain="tracking.hostelbookers.com";var strProtocol=(bSecure) ? "https":"http";oScript.setAttribute("src",strProtocol+"://"+strTrackingDomain+"/track/request/?intRequestID=511398074");oBody.appendChild(oScript);});
-</script>
+<script type="text/javascript">$(window).load(function(){var oScript = document.createElement("script");var oBody = document.getElementsByTagName("body")[0];oScript.setAttribute("src", "/scripts/benchmark.cfm/?strRequestIdentifier=dc47d709-9a57-4c9c-9003-f91092b8912b");oBody.appendChild(oScript);});</script>
 </head>
 <body id="staticContent">
 <div id="header">
 <a id="logo" href="/">
-<img src="http://en-img.hb-assets.com/r13/assets/common/images/logos/hostelbookers.png" width="252" height="45" alt="HostelBookers Logo">
+<img src="http://en-img.hb-assets.com/r20/assets/common/images/logos/hostelbookers.png" width="252" height="45" alt="HostelBookers Logo">
 </a>
 <ul id="navTop">
 <li id="currencySwitch">
@@ -128,13 +126,13 @@ ENGLISH
 </ul>
 <div id="navFollow">
 <a href="http://twitter.com/hostelbookers" target="_blank" data-nedstat="clickout.twitter_header&amp;hb_language=en">
-<img src="http://en-img.hb-assets.com/r13/assets/common/images/icons/twitter.gif" width="16" height="16" alt="Follow us on Twitter">
+<img src="http://en-img.hb-assets.com/r20/assets/common/images/icons/twitter.gif" width="16" height="16" alt="Follow us on Twitter">
 </a>
 <a href="http://www.facebook.com/hostelbookers" target="_blank" data-nedstat="clickout.facebook_header&amp;hb_language=en">
-<img src="http://en-img.hb-assets.com/r13/assets/common/images/icons/facebook.gif" width="16" height="16" alt="Join our Facebook group">
+<img src="http://en-img.hb-assets.com/r20/assets/common/images/icons/facebook.gif" width="16" height="16" alt="Join our Facebook group">
 </a>
 <a href="https://plus.google.com/116279688584067813795/posts" target="_blank" data-nedstat="clickout.googleplus_header&amp;hb_language=en">
-<img src="http://en-img.hb-assets.com/r13/assets/common/images/icons/googleplus.gif" width="16" height="16" alt="Google+">
+<img src="http://en-img.hb-assets.com/r20/assets/common/images/icons/googleplus.gif" width="16" height="16" alt="Google+">
 </a>
 </div>
 </div>
@@ -156,10 +154,10 @@ ENGLISH
 <div id="destDropdown" class="formField topField">
 <input type="radio" name="strSearchType" id="strSearchTypeDropdown" value="dropDown" class="ddftradio" checked="checked">
 <select name="intLocationId" id="intLocationId" class="required" onfocus="HB.oSearchBox.toggleSearchType('dropdown');" tabindex="1">
-<option value="164">Thailand</option>
+<option value="-1">Select a Country</option>
 </select>
 <select name="intDestinationId" id="intDestinationId" class="required" onfocus="HB.oSearchBox.toggleSearchType('dropdown');" tabindex="2">
-<option value="1793">Bangkok</option>
+<option value="-1">Select a City</option>
 </select>
 <span class="valBubble"><div class="tooltip-arrow-down">&nbsp;</div>Please select from the dropdowns</span>
 </div>
@@ -200,19 +198,19 @@ ENGLISH
 <span id="checkInDate">
 <label for="checkIn">Check-In</label>
 <span id="checkInValSearchDate">
-<input type="text" name="strCheckin" id="checkIn" value="28/06/2013" tabindex="4">
+<input type="text" name="strCheckin" id="checkIn" value="31/12/2013" tabindex="4">
 <span id="checkInInvalidDateFormat" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid date</span>
 <span id="checkInInvalidDateMin" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Cannot be in the past</span>
-<span id="checkInInvalidDateMax" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Check-Out cannot be beyond 21/06/2014</span>
+<span id="checkInInvalidDateMax" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Check-Out cannot be beyond 24/12/2014</span>
 </span>
 </span>
 <span id="checkOutDate">
 <label for="checkOut">Check-Out</label>
 <span id="checkOutValSearchDate">
-<input type="text" name="strCheckOut" id="checkOut" value="30/06/2013" tabindex="5">
+<input type="text" name="strCheckOut" id="checkOut" value="02/01/2014" tabindex="5">
 <span id="checkOutInvalidDateFormat" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid date</span>
 <span id="checkOutInvalidDateMin" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Cannot be in the past</span>
-<span id="checkOutInvalidDateMax" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Check-Out cannot be beyond 21/06/2014</span>
+<span id="checkOutInvalidDateMax" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Invalid Date - Check-Out cannot be beyond 24/12/2014</span>
 <span id="checkOutInvalidDateParadox" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Your check-out date is before your check-in date. Please check your dates and try again.</span>
 <span id="checkOutInvalidDatePeriod" class="valBubble"><div class="tooltip-arrow">&nbsp;</div>Bookings can only be made for a maximum period of 31 days. Please enter alternative dates and try again.</span>
 </span>
@@ -327,21 +325,21 @@ ENGLISH
 </div>
 <div id="searchNow">
 <div id="searchButtonDiv"><button type="submit" class="main" id="searchButton" tabindex="7">Search Now<span>&nbsp;</span></button></div>
-<div id="processingBarDiv" class="hide"><img src="http://en-img.hb-assets.com/r13/assets/lang/images/ui/tbloadinganimation.gif" alt="processing" title="processing"></div>
+<div id="processingBarDiv" class="hide"><img src="http://en-img.hb-assets.com/r20/assets/lang/images/ui/tbloadinganimation.gif" alt="processing" title="processing"></div>
 </div>
 </div>
 </form>
 </div>
 <div id="promoBox">
-<h2>In a recent survey we were on average <em>7.9% cheaper than Hostelworld.</em>*</h2>
-<h2>Pay <em>no booking fees</em></h2>
-<p>*A recent study showed we were on average 7.9% cheaper than Hostelworld across 705 hostels in September 2012. Survey by Reed Business Insight. <a href="http://www.hostelbookers.com/hostelworld-price-comparison/" id="priceComparison" title="Hostel Price Comparison" onclick="ns_onclick(this,'','link.banner.campaign.2010.price_comparison_page.page&amp;hb_language=en&amp;hb_sign-in_status=0','clickin');">Click for more info</a>.</p>
+<h2><em>No Booking Fees</em></h2>
+<h3>Low Prices, <em>Cheaper Stays!</em></h3>
+<h4>Rated <em class="rated">"Excellent"</em><br> on <em>Trustpilot</em> <span>(9.3 out of 10)</span></h4>
 </div>
 <br class="clearfix">
 </div>
 </div>
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/guides.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="http://en-css.hb-assets.com/r30/assets/common/css/compression/kb.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/guides.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="http://en-css.hb-assets.com/r45/assets/common/css/compression/kb.min.css" rel="stylesheet" type="text/css" media="screen">
 <div id="kbContainer">
 <a name="top"></a>
 <div id="kbLeftCol">
@@ -360,7 +358,7 @@ ENGLISH
 <form name="searchArticleForm" action="/index.cfm?fuseaction=knowledgebase.search&amp;thickbox=false" method="post">
 <label>Search:</label>
 <input type="text" name="searchString" size="36" value="">
-<a href="#" onclick="document.searchArticleForm.submit();"><img src="http://en-img.hb-assets.com/r13/assets/lang/images/buttons/btnsearch3.png" alt="icon"></a>
+<a href="#" onclick="document.searchArticleForm.submit();"><img src="http://en-img.hb-assets.com/r20/assets/lang/images/buttons/btnsearch3.png" alt="icon"></a>
 <input type="hidden" value="12789321" name="i_pass">
 <input type="hidden" value="allKeywords" id="searchType_allKeywords" name="searchType">
 <input type="hidden" value="subjectText" id="searchSection_subjectText" name="searchSection">
@@ -481,20 +479,20 @@ As our privacy statement may change due to developments in the law we encourage 
 London
 WC1V 6RL
 <br><br>
-+44 (0)20 7406 1800 
++353 (1) 4980700
 <br><p></p>
 </div>
 </div><!--/kbBody-->
 </div><!--/kbContainer-->
 <!-- Begin Sitestat4 code -->
-<!-- http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=null&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en06.hostelbookers.web4&amp;hb_sign-in_status=0 -->
+<!-- http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=hbbloggroups&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en07.hostelbookers.web4&amp;hb_sign-in_status=0 -->
 <script language="JavaScript1.1" type="text/javascript">
 <!--
-sitestat("http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=null&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en06.hostelbookers.web4&amp;hb_sign-in_status=0");
+sitestat("http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=hbbloggroups&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en07.hostelbookers.web4&amp;hb_sign-in_status=0");
 //-->
 </script>
 <noscript>
-<img src="http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=null&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en06.hostelbookers.web4&amp;hb_sign-in_status=0" width="1" height="1" alt="">
+<img src="http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=hbbloggroups&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en07.hostelbookers.web4&amp;hb_sign-in_status=0" width="1" height="1" alt="">
 </noscript>
 <!-- End Sitestat4 code -->
 </div>
@@ -561,25 +559,25 @@ sitestat("http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;cate
 <div id="copyright" class="small">HostelBookers.com Ltd 2003-2013</div>
 </div>
 </div>
-<!-- HostelBookers.com | ACTIVE | 2013-06-21 | 03-34-30 | N/A | CF9.en06.HostelBookers.web4 | 04-06-2013 @ 08:33:39 | 1mins -->
+<!-- HostelBookers.com | ACTIVE | 2013-12-24 | 16-17-07 | N/A | CF9.en07.HostelBookers.web4 | 10-12-2013 @ 15:29:47 | 20mins -->
 <!--up.time application monitoring-->
-<script type="text/javascript">GoogleAnalytics.strKey = "UA-28444024-1";</script>
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/assets/common/javascript/compression/common.bottom.min.js"></script>
-<script type="text/javascript" src="http://en-js.hb-assets.com/r22/assets/common/javascript/compression/searchbox.bottom.min.js"></script>
+<script type="text/javascript">HB.Tracking.GoogleAnalytics.setAccount("UA-28444024-1");</script>
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/assets/common/javascript/compression/common.bottom.min.js"></script>
+<script type="text/javascript" src="http://en-js.hb-assets.com/r39/assets/common/javascript/compression/searchbox.bottom.min.js"></script>
 <!-- Begin Sitestat LandingPage code -->
 <script type="text/javascript">
 <!--
-sitestat("http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=null&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en06.hostelbookers.web4&amp;hb_sign-in_status=0");
+sitestat("http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=hbbloggroups&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en07.hostelbookers.web4&amp;hb_sign-in_status=0");
 //-->
 </script>
-<noscript><img src="http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=null&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en06.hostelbookers.web4&amp;hb_sign-in_status=0" width="1" height="1" alt="" /></noscript>
+<noscript><img src="http://nedstat.hostelbookers.com/hb/en/s?content.privacy.page&amp;category=content&amp;hb_language=en&amp;hb_affiliate=hbbloggroups&amp;hb_sitecurrency=usd&amp;hb_server=cf9.en07.hostelbookers.web4&amp;hb_sign-in_status=0" width="1" height="1" alt="" /></noscript>
 <!-- End Sitestat LandingPage code -->
 
  <script type="text/javascript"> AutoComplete.init("http://ac.hb-assets.com/en/search/",{"strClose":"Close","strKeepTyping":"Keep typing to refine your search","strNoMatches":"Sorry there are no matches","stuMatchTypes":{"1":"Properties","9":"Districts","8":"Destinations"},"strPleaseSelect":"Please select a result from the list below"},{"strSearchInput":"destination","strPrevSearch":"strPrevSearch","strSearchButton":"searchButton","strResultsDiv":"predictiveSearchResults","strIntMatchIdInput":"intMatchId","strIntMatchTypeInput":"intMatchType"}); 
-/* ---------- INLINE SCRIPT ENTRY DIVIDER ---------- */
+/* inlineJS */
 HB.oInputPlaceHolder	= new HB.InputPlaceHolder({
 selField:	"#destination",
 text:	"Search cities, districts and properties"
 });
-/* ---------- INLINE SCRIPT ENTRY DIVIDER ---------- */
+/* inlineJS */
 </script> </body></html>
