--- a/d/da/dam/damnpervert.com.html
+++ b/d/da/dam/damnpervert.com.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the damnpervert.com privacy policy that was archived on 2013-04-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130416053231id_/http%3A//www.dplivecams.com/privacy.html%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the damnpervert.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225024611id_/http%3A//www.dplivecams.com/privacy.html%3F) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
-  <title>DPlivecams - Privacy</title>
+  <title>DPlivecams - Privacy Policy</title>
 
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130326/style-min.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130919/style-min.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/skin/dplc/css/20130111/style-skin-min.css" media="all">
-<!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
-<!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
-<!--[if IE 8]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie8.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 8]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie8.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
 <meta name="description" content="DPlivecams features live webcam models streaming direct to you from their homes and studios around the world. Sexy webcam online strip shows, sex shows, you name it.">
 <meta name="keywords" content="DPlivecams, free, live, chat, cams, cam, webcam, private, videos, picture, sex, straight, gay, asian, shemale, latina, bdsm, tranny">
 <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA">
@@ -141,13 +141,16 @@
 
 <h1>Contact</h1>
 <p>If you have any questions about this Privacy Policy, please contact our customer service department at <a href="/contactsupport.php?">support@dplivecams.com</a> and provide us with your name, your DPlivecams login name, and any information you feel is important.</p>
+
 <p>The address for correspondence by post is</p>
-<p>Streamates Limited<br>
-c/o Ariel Secretaries Limited<br>
-196, Arch Makarios Ave, Ariel Corner,<br>
-1st Flr, Office 102<br>
-P.O. Box 57528<br>
-3316 Limassol - Cyprus</p>
+<address>
+  ICF Technology, Inc.<br>
+  PO Box 21508<br>
+  Seattle, WA 98111<br>
+  USA
+</address>
+
+
   </div>
 </div>
 
@@ -235,7 +238,7 @@ P.O. Box 57528<br>
 <noscript>
   <img class="hide" src="http://www.dplivecams.com/pixel/nojs.php" alt="">
 </noscript>
-<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20130329/naiad.js"></script>
+<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20131217/naiad.js"></script>
 <script type="text/javascript">
 window.suggestmeyes_loaded = true;
 Naiad.Init({mediabase:'http://m1.nsimg.net',state:'',wwwbase:location.protocol+'//'+location.hostname});
@@ -255,11 +258,19 @@ Naiad.OnDomReadyQueue([ 50, function() {
 }, '' ]);
 </script>
 
- <script type="text/javascript" src="http://e.sexad.net/S20120107/bundle.js"></script>
+ <script type="text/javascript" src="http://e.sexad.net/S20130514/bundle.js"></script>
 <script id="sanet" type="text/javascript">
 try
 {
-  SAN.Naiad.init({cookie_domain: '.dplivecams.com'});
+  if (typeof Naiad !== 'undefined' && Naiad.OnDomReadyQueue) {
+    Naiad.OnDomReadyQueue([1, function () {
+      SAN.Naiad.init({cookie_domain: '.dplivecams.com'});
+    }]);
+  } else {
+    $(function () {
+      SAN.Naiad.init({cookie_domain: '.dplivecams.com'});
+    });
+  }
 }
 catch(e)
 {
