--- a/m/ma/mas/massivetrafficlist.com.html
+++ b/m/ma/mas/massivetrafficlist.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the massivetrafficlist.com privacy policy that was archived on 2013-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130530175120id_/http%3A//massivetrafficlist.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the massivetrafficlist.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225101715id_/http%3A//massivetrafficlist.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -588,7 +588,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 </style>
 <center>
-           <a href="http://massivetrafficlist.com/bannerclick.php?id=3453" target="_blank"><img src="http://www.passiveincomebeginnings.com/uploads/profitablesunrise_468x60_2.gif" border="0"></a><br>
+           <a href="http://massivetrafficlist.com/bannerclick.php?id=3045" target="_blank"><img src="http://teprofits.com/images/banner03.jpg" border="0"></a><br>
 	</center><p align="center">
 
 
